navbar spacing fixed

--- a/app/assets/stylesheets/components/_general.scss
+++ b/app/assets/stylesheets/components/_general.scss
@@ -9,5 +9,6 @@ body {
 }
 
 #main-layout-container {
-    padding-top: 60px;
+  position: relative;
+  padding-top: 100px;
 }
