--- a/app/assets/stylesheets/components/_superpowers-layout.scss
+++ b/app/assets/stylesheets/components/_superpowers-layout.scss
@@ -12,8 +12,9 @@
 }
 
 .banner-container {
-  padding: 30px;
-
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 60px;
 }
 
 .banner-image {
